--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       margin-top: 10px;
       color: var(--text-color);
     }
-    input, select, button {
+    input, select, button, textarea {
       padding: 12px;
       margin-top: 5px;
       margin-bottom: 15px;
@@ -82,8 +82,10 @@
       <input type="text" id="name" name="name" required />
       <label for="phone">Phone Number</label>
       <input type="tel" id="phone" name="phone" required />
-      <label for="address">Property Address</label>
-      <input type="text" id="address" name="address" required />
+      <label for="trs">Township, Range, Section (Optional)</label>
+      <input type="text" id="trs" name="trs" />
+      <label for="address">Property Address (Optional)</label>
+      <input type="text" id="address" name="address" />
       <img id="mapPreview" class="map-preview" src="" alt="Map Preview" style="display:none;" />
       <label for="burnType">Burn Type</label>
       <select id="burnType" name="burnType" required>
@@ -111,6 +113,8 @@
         <option value="Dan Freauff">Dan Freauff</option>
         <option value="Bill Welch">Bill Welch</option>
       </select>
+      <label for="notes">Notes (Optional)</label>
+      <textarea id="notes" name="notes" rows="4"></textarea>
       <button type="submit">Submit Burn Permit</button>
     </form>
   </div>
