--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
       <label for="burnType">Burn Type</label>
       <select id="burnType" name="burnType" required>
         <option value="">--Select--</option>
-        <option value="Yard Debris">Yard Debris</option>
         <option value="Agricultural">Agricultural</option>
-        <option value="Land Clearing">Land Clearing</option>
-        <option value="Prescribed Burn">Prescribed Burn</option>
+        <option value="Forestry">Forestry</option>
+        <option value="Commercial/ Construction">Commercial/ Construction</option>
+        <option value="Yard Debris">Yard Debris</option>
         <option value="Other">Other</option>
       </select>
       <div class="date-group">
