--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       <input type="text" id="name" name="name" required />
       <label for="phone">Phone Number</label>
       <input type="tel" id="phone" name="phone" required />
-      <label for="trs">Township, Range, Section (Optional)</label>
+      <label for="trs">Township, Range, Section <span style='font-weight: normal;'>(e.g. 145,18,7)</span></label>
       <input type="text" id="trs" name="trs" />
-      <label for="address">Property Address (Optional)</label>
+      <label for="address">Property Address</label>
       <input type="text" id="address" name="address" />
       <img id="mapPreview" class="map-preview" src="" alt="Map Preview" style="display:none;" />
       <label for="burnType">Burn Type</label>
@@ -113,7 +113,7 @@
         <option value="Dan Freauff">Dan Freauff</option>
         <option value="Bill Welch">Bill Welch</option>
       </select>
-      <label for="notes">Notes (Optional)</label>
+      <label for="notes">Notes</label>
       <textarea id="notes" name="notes" rows="4"></textarea>
       <button type="submit">Submit Burn Permit</button>
     </form>
